# riverql

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  release-plz.toml
.github/workflows/: release.yml
examples/eww/: eww.scss  eww.yuck
src/: client.rs  gql.rs  main.rs  river.rs  server.rs
