[package]
name = "riverql"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
wayland-scanner = "0.31"
wayland-backend = "0.3"
tokio = { version = "1", features = ["full"] }
async-graphql = "7"
async-graphql-axum = "7"
axum = { version = "0.8", features = ["ws"] }
tokio-stream = { version = "0.1", features = ["sync"] }
once_cell = "1"

[build-dependencies]
