[package]
name = "riverql"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "GraphQL bridge and CLI client for the River Wayland compositor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/typester/riverql"
keywords = ["river", "wayland", "graphql", "cli"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
wayland-client = "0.31"
wayland-scanner = "0.31"
wayland-backend = "0.3"
tokio = { version = "1", features = ["full"] }
async-graphql = "7"
async-graphql-axum = "7"
axum = { version = "0.8", features = ["ws"] }
tokio-stream = { version = "0.1", features = ["sync"] }
once_cell = "1"
tokio-tungstenite = { version = "0.21", default-features = true }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
argh = "0.1.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
libc = "0.2"
url = "2"
